--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,14 @@
           package="ru.iris.terminal"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="17"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk android:minSdkVersion="10"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+
+        <service android:enabled="true" android:name="ru.iris.terminal.SpeakService" />
+        <service android:enabled="true" android:name="ru.iris.terminal.AMQPService" />
+
         <activity android:name="TerminalIndex"
                   android:label="@string/app_name"
                   android:theme="@android:style/Theme.NoTitleBar">
